--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
                 <div class="feature-title">Completely Free</div>
             </div>
             <div class="feature-card">
-                <span class="feature-icon">⚡</span>
-                <div class="feature-title">Lightning Fast</div>
+                <span class="feature-icon">🤖</span>
+                <div class="feature-title">AI Detector</div>
             </div>
             <div class="feature-card converter-card" onclick="openConverter()">
                 <span class="feature-icon">🔄</span>
