--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Counter SEO - Free Text Analysis Tool</title>
+    <title>SEO Word Counter and A.I. Detector - Free Text Analysis Tool</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -11,8 +11,9 @@
             background: linear-gradient(135deg, #4f46e5 0%, #06b6d4 100%);
             min-height: 100vh;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             padding: 20px;
         }
         .container {
@@ -339,6 +340,13 @@
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer style="width: 100%; max-width: 800px; text-align: center; padding: 30px 20px; margin-top: 40px; color: #334155; font-size: 0.875rem; border-top: 1px solid rgba(0, 0, 0, 0.1);">
+        <p style="margin-bottom: 12px;">© 2025 <a href="https://www.wizmarketing.co.il/" target="_blank" style="color: #334155; text-decoration: none; font-weight: 600; border-bottom: 1px solid rgba(0, 0, 0, 0.3); padding-bottom: 2px;">Wiz-Marketing</a> - All rights reserved</p>
+        <p style="font-size: 0.75rem; opacity: 0.8; margin-bottom: 8px; color: #334155;">Professional SEO & Digital Marketing Solutions</p>
+        <p style="font-size: 0.75rem;"><a href="https://fab-cell.github.io/Image-to-PNG-Converter/" target="_blank" style="color: #334155; text-decoration: none; font-weight: 500;">🔄 Image to PNG Converter</a></p>
+    </footer>
 
     <div class="modal" id="modal">
         <div class="modal-content">
