--- a/index.html
+++ b/index.html
@@ -436,13 +436,20 @@
             const power = ['amazing', 'excellent', 'perfect', 'best', 'top', 'leading'];
             const common = ['the', 'and', 'or', 'but', 'in', 'on', 'at', 'to', 'for', 'of', 'with', 'by', 'a', 'an', 'is', 'are', 'was', 'were', 'be', 'been', 'have', 'has', 'had', 'do', 'does', 'did', 'will', 'would', 'could', 'should', 'may', 'might', 'must', 'can', 'this', 'that', 'these', 'those', 'i', 'you', 'he', 'she', 'it', 'we', 'they'];
             let meaningful = 0;
+            let validWords = 0;
+            
             words.forEach(word => {
                 const clean = word.toLowerCase().replace(/[^a-z]/g, '');
-                if (!common.includes(clean) && (clean.length > 3 || power.includes(clean))) {
-                    meaningful++;
+                // Only count words that are at least 3 letters and contain vowels (basic word validation)
+                if (clean.length >= 3 && /[aeiou]/.test(clean)) {
+                    validWords++;
+                    if (!common.includes(clean) && (clean.length > 4 || power.includes(clean))) {
+                        meaningful++;
+                    }
                 }
             });
-            const strength = (meaningful / words.length) * 100;
+            
+            const strength = validWords > 0 ? (meaningful / validWords) * 100 : 0;
             document.getElementById('contentStrength').textContent = Math.round(strength) + '%';
 
             if (words.length > 0) {
